--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ body { font-family: Arial; margin:0; background:#f0f4f8; }
 header { background:#2196F3; color:white; padding:20px; text-align:center; font-size:28px; font-weight:bold; cursor:pointer; z-index:10; position:relative; }
 #home { 
   min-height: 100vh; 
-  background: url('https://i.ibb.co/0jKcN0F/student-background.jpg') no-repeat center center/cover; 
+  background: url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover; 
   display:flex; 
   flex-direction:column; 
   align-items:center; 
@@ -31,7 +31,6 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
 
 <header onclick="showHome()">MYSTUDYSPIRE</header>
 
-<!-- HOME -->
 <div id="home">
   <div class="graphic">
     <img src="https://i.ibb.co/3Wn3DqT/study-graphic.png" alt="Student Studying">
@@ -39,13 +38,11 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
   <div class="container" id="classes-container"></div>
 </div>
 
-<!-- SUBJECTS -->
 <div id="subjects" class="hidden">
   <span class="back-btn" onclick="showHome()">⬅ Back to Classes</span>
   <div class="container" id="subjects-container"></div>
 </div>
 
-<!-- CHAPTERS -->
 <div id="chapters" class="hidden">
   <span class="back-btn" onclick="backToSubjects()">⬅ Back to Subjects</span>
   <div class="container" id="chapters-container" style="flex-direction:column;"></div>
@@ -81,73 +78,4 @@ const chaptersData = {
     "Social Science": ["History: The French Revolution", "Socialism in Europe and the Russian Revolution", "Nazism and the Rise of Hitler"]
   },
   "Class 9": {
-    "Math": ["Number Systems", "Algebra", "Coordinate Geometry", "Geometry", "Mensuration"],
-    "Science": ["Matter in Our Surroundings", "Atoms and Molecules", "Structure of the Atom", "The Fundamental Unit of Life"],
-    "English": ["The Road Not Taken", "Wind", "The Bond of Love", "A Letter to God"],
-    "Social Science": ["India and the Contemporary World", "Nationalism in India", "The Making of a Global World"]
-  },
-  "Class 10": {
-    "Math": ["Real Numbers", "Polynomials", "Pair of Linear Equations in Two Variables", "Triangles", "Circles"],
-    "Science": ["Chemical Reactions and Equations", "Acids, Bases and Salts", "Metals and Non-Metals", "Carbon and its Compounds"],
-    "English": ["The Lost Child", "A Letter to God", "Two Stories About Flying", "The Necklace"],
-    "Social Science": ["India and the Contemporary World II", "Contemporary India II", "Democratic Politics II"]
-  }
-};
-
-let currentClass = '';
-
-// Populate classes after page load
-window.onload = function() {
-  const classesContainer = document.getElementById('classes-container');
-  Object.keys(classesData).forEach(cls => {
-    const div = document.createElement('div');
-    div.className = 'card';
-    div.textContent = cls;
-    div.onclick = () => showSubjects(cls);
-    classesContainer.appendChild(div);
-  });
-};
-
-function showHome() {
-  document.getElementById('home').classList.remove('hidden');
-  document.getElementById('subjects').classList.add('hidden');
-  document.getElementById('chapters').classList.add('hidden');
-}
-
-function showSubjects(cls) {
-  currentClass = cls;
-  const container = document.getElementById('subjects-container');
-  container.innerHTML = '';
-  classesData[cls].forEach(subject => {
-    const div = document.createElement('div');
-    div.className = 'card';
-    div.textContent = subject;
-    div.onclick = () => showChapters(subject);
-    container.appendChild(div);
-  });
-  document.getElementById('home').classList.add('hidden');
-  document.getElementById('subjects').classList.remove('hidden');
-  document.getElementById('chapters').classList.add('hidden');
-}
-
-function showChapters(subject) {
-  const container = document.getElementById('chapters-container');
-  container.innerHTML = '';
-  chaptersData[currentClass][subject].forEach(chapter => {
-    const div = document.createElement('div');
-    div.className = 'chapter';
-    div.innerHTML = `${chapter} <a href="#" onclick="alert('Replace with PDF link')">Download</a>`;
-    container.appendChild(div);
-  });
-  document.getElementById('subjects').classList.add('hidden');
-  document.getElementById('chapters').classList.remove('hidden');
-}
-
-function backToSubjects() {
-  document.getElementById('subjects').classList.remove('hidden');
-  document.getElementById('chapters').classList.add('hidden');
-}
-</script>
-
-</body>
-</html>
+    "Math": ["Number Systems", "Algebra", "Coordinate]()
