--- a/index.html
+++ b/index.html
@@ -5,25 +5,66 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>MYSTUDYSPIRE</title>
 <style>
-body { font-family: Arial; margin:0; background:#f0f4f8; }
+body { margin:0; font-family: Arial; background:#f0f4f8; }
 header { background:#2196F3; color:white; padding:20px; text-align:center; font-size:28px; font-weight:bold; cursor:pointer; z-index:10; position:relative; }
-#home { 
-  min-height: 100vh; 
-  background: url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1350&q=80') no-repeat center center/cover; 
-  display:flex; 
-  flex-direction:column; 
-  align-items:center; 
-  justify-content:center; 
-  padding:20px;
+
+#home {
+  min-height: 100vh;
+  background: url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1350&q=80') no-repeat center center;
+  background-size: cover;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
 }
-.container { padding:20px; display:flex; flex-wrap:wrap; justify-content:center; gap:20px; z-index:5; position:relative; }
-.card { background:rgba(255,255,255,0.9); width:200px; padding:20px; text-align:center; border-radius:10px; box-shadow:0 4px 6px rgba(0,0,0,0.1); cursor:pointer; transition:0.2s; }
+
+#home::before {
+  content: "";
+  position: absolute;
+  top:0; left:0; right:0; bottom:0;
+  background: rgba(0,0,0,0.4); /* dark overlay for readability */
+  z-index:1;
+}
+
+.container { 
+  padding:20px; 
+  display:flex; 
+  flex-wrap:wrap; 
+  justify-content:center; 
+  gap:20px; 
+  position: relative; 
+  z-index:2; /* above overlay */
+}
+
+.card { 
+  background: rgba(255,255,255,0.9); 
+  width:200px; 
+  padding:20px; 
+  text-align:center; 
+  border-radius:10px; 
+  box-shadow:0 4px 6px rgba(0,0,0,0.1); 
+  cursor:pointer; 
+  transition:0.2s; 
+}
 .card:hover { transform:translateY(-5px); }
+
 .hidden { display:none; }
-.chapter { background:white; margin:10px 0; padding:15px; border-radius:8px; box-shadow:0 2px 4px rgba(0,0,0,0.1); display:flex; justify-content:space-between; align-items:center; }
+
+.chapter { 
+  background:white; 
+  margin:10px 0; 
+  padding:15px; 
+  border-radius:8px; 
+  box-shadow:0 2px 4px rgba(0,0,0,0.1); 
+  display:flex; 
+  justify-content:space-between; 
+  align-items:center; 
+}
 .chapter a { text-decoration:none; background:#2196F3; color:white; padding:8px 12px; border-radius:5px; }
 .back-btn { margin:20px; background:#2196F3; color:white; padding:8px 12px; border-radius:5px; cursor:pointer; display:inline-block; }
-.graphic { text-align:center; margin:20px 0; }
+.graphic { text-align:center; margin:20px 0; z-index:2; position:relative; }
 .graphic img { width:300px; max-width:90%; }
 </style>
 </head>
@@ -49,7 +90,6 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
 </div>
 
 <script>
-// NCERT-based subjects and chapters for each class
 const classesData = {
   "Class 6": ["Math", "Science", "English", "Social Science"],
   "Class 7": ["Math", "Science", "English", "Social Science"],
@@ -78,4 +118,72 @@ const chaptersData = {
     "Social Science": ["History: The French Revolution", "Socialism in Europe and the Russian Revolution", "Nazism and the Rise of Hitler"]
   },
   "Class 9": {
-    "Math": ["Number Systems", "Algebra", "Coordinate]()
+    "Math": ["Number Systems", "Algebra", "Coordinate Geometry", "Geometry", "Mensuration"],
+    "Science": ["Matter in Our Surroundings", "Atoms and Molecules", "Structure of the Atom", "The Fundamental Unit of Life"],
+    "English": ["The Road Not Taken", "Wind", "The Bond of Love", "A Letter to God"],
+    "Social Science": ["India and the Contemporary World", "Nationalism in India", "The Making of a Global World"]
+  },
+  "Class 10": {
+    "Math": ["Real Numbers", "Polynomials", "Pair of Linear Equations in Two Variables", "Triangles", "Circles"],
+    "Science": ["Chemical Reactions and Equations", "Acids, Bases and Salts", "Metals and Non-Metals", "Carbon and its Compounds"],
+    "English": ["The Lost Child", "A Letter to God", "Two Stories About Flying", "The Necklace"],
+    "Social Science": ["India and the Contemporary World II", "Contemporary India II", "Democratic Politics II"]
+  }
+};
+
+let currentClass = '';
+
+window.onload = function() {
+  const classesContainer = document.getElementById('classes-container');
+  Object.keys(classesData).forEach(cls => {
+    const div = document.createElement('div');
+    div.className = 'card';
+    div.textContent = cls;
+    div.onclick = () => showSubjects(cls);
+    classesContainer.appendChild(div);
+  });
+};
+
+function showHome() {
+  document.getElementById('home').classList.remove('hidden');
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showSubjects(cls) {
+  currentClass = cls;
+  const container = document.getElementById('subjects-container');
+  container.innerHTML = '';
+  classesData[cls].forEach(subject => {
+    const div = document.createElement('div');
+    div.className = 'card';
+    div.textContent = subject;
+    div.onclick = () => showChapters(subject);
+    container.appendChild(div);
+  });
+  document.getElementById('home').classList.add('hidden');
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+
+function showChapters(subject) {
+  const container = document.getElementById('chapters-container');
+  container.innerHTML = '';
+  chaptersData[currentClass][subject].forEach(chapter => {
+    const div = document.createElement('div');
+    div.className = 'chapter';
+    div.innerHTML = `${chapter} <a href="#" onclick="alert('Replace with PDF link')">Download</a>`;
+    container.appendChild(div);
+  });
+  document.getElementById('subjects').classList.add('hidden');
+  document.getElementById('chapters').classList.remove('hidden');
+}
+
+function backToSubjects() {
+  document.getElementById('subjects').classList.remove('hidden');
+  document.getElementById('chapters').classList.add('hidden');
+}
+</script>
+
+</body>
+</html>
