--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
 
 #home {
   min-height: 100vh;
-  background: url('https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1350&q=80') no-repeat center center;
+  background: url('https://images.unsplash.com/photo-1596495577886-d920f1fbde8e?auto=format&fit=crop&w=1350&q=80') no-repeat center center;
   background-size: cover;
   position: relative;
   display: flex;
@@ -29,7 +29,6 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
 }
 
 .container { 
-  padding:20px; 
   display:flex; 
   flex-wrap:wrap; 
   justify-content:center; 
@@ -74,7 +73,7 @@ header { background:#2196F3; color:white; padding:20px; text-align:center; font-
 
 <div id="home">
   <div class="graphic">
-    <img src="https://i.ibb.co/3Wn3DqT/study-graphic.png" alt="Student Studying">
+    <img src="https://images.unsplash.com/photo-1588072432836-e10032774350?auto=format&fit=crop&w=1350&q=80" alt="Student Studying">
   </div>
   <div class="container" id="classes-container"></div>
 </div>
